--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,206 @@
+.home {
+  background-image: url("../images/edgar-chaparro-sHfo3WOgGTU-unsplash.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 700px;
+  position: relative;
+  opacity: 0.90;
+  background-color: black;
+}
+
+.home .nav {
+  justify-content: space-between;
+  padding-top: 35px;
+}
+
+.home .nav h3 {
+  color: white;
+  margin-left: 100px;
+}
+
+.home .navItem {
+  display: flex;
+  margin-right: 60px;
+  align-items: center;
+}
+
+.home .navItem a {
+  text-decoration: none;
+}
+
+.home .navItem a h6 {
+  margin-right: 30px;
+  font-weight: 400;
+  color: white;
+}
+
+.home #name {
+  color: #E8B933;
+  font-weight: bold;
+}
+
+.home .title {
+  text-align: left;
+  color: wheat;
+  margin-left: 100px;
+  margin-top: 145px;
+  font-size: 50px;
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
+.home #description {
+  margin-left: 100px;
+  text-align: left;
+  width: 35%;
+  color: white;
+  font-weight: lighter;
+  font-size: small;
+}
+
+.home .join-btn {
+  margin-right: 74%;
+  width: 150px;
+  height: 50px;
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  background-color: #E5B836;
+  border: none;
+}
+
+.home .category {
+  display: flex;
+  margin-top: 250px;
+  justify-content: center;
+}
+
+.home .category-box {
+  width: 320px;
+  height: 320px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border: 2px solid black;
+  color: white;
+}
+
+.home .category-box h3 {
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: lighter;
+  font-size: 30px;
+  color: #E5B836;
+}
+
+.home .category-box small {
+  justify-content: space-around;
+  text-align: center;
+  margin-bottom: 10px;
+  margin: auto;
+}
+
+.home #category-box1 {
+  background-image: url("../images/hipcravo-5UbIqV58CW8-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home #category-box2 {
+  background-image: url("../images/daniel-apodaca-WdoQio6HPVA-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home #category-box3 {
+  background-image: url("../images/penguinuhh-8VI6WwEEEHw-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home .mid-section {
+  margin-top: 150px;
+  display: flex;
+  padding-left: 150px;
+}
+
+.home .mid-section img {
+  width: auto;
+  height: 500px;
+  position: absolute;
+  clip: rect(0px, 600px, 450px, 0px);
+}
+
+.home .mid-content {
+  margin-left: 750px;
+  width: 35%;
+  margin-top: 15px;
+  text-align: left;
+}
+
+.home .mid-content h3 {
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: lighter;
+}
+
+.home .mid-content small {
+  width: 300px;
+}
+
+.home .training h3 {
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: lighter;
+  margin-top: 300px;
+  margin-bottom: 100px;
+}
+
+.home .training .trainingCategory {
+  display: flex;
+  justify-content: center;
+}
+
+.home .training .trainingCategory .training1 {
+  border: none;
+  height: 70vh;
+  width: 40%;
+  background-image: url("../images/bruce-mars-gJtDg6WfMlQ-unsplash.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-right: 5px;
+}
+
+.home .training .trainingCategory .training1 .trainingName {
+  width: 65%;
+  height: 15%;
+  background: #E5B836;
+  margin-top: 60%;
+}
+
+.home .training .trainingCategory .training1 .trainingName h5 {
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: lighter;
+  padding-top: 20px;
+}
+
+.home .training .trainingCategory .training2 {
+  border: none;
+  height: 70vh;
+  width: 40%;
+  background-image: url("../images/arthur-edelman-qfjuh4OLdxw-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: 5px;
+}
+
+.home .training .trainingCategory .training2 .trainingName {
+  width: 65%;
+  height: 15%;
+  background: #E5B836;
+  margin-top: 60%;
+}
+
+.home .training .trainingCategory .training2 .trainingName h5 {
+  font-family: "Impact", Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: lighter;
+  padding-top: 20px;
+}
+
 .App {
   text-align: center;
 }
@@ -36,3 +239,4 @@
     transform: rotate(360deg);
   }
 }
+/*# sourceMappingURL=App.css.map */
